--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@ logo: /images/svdb.png
 keywords: "sjaak van den berg, svdb, bitcoin, crypto, payment, integration, bitcoins, wordpress, betaling, webshop, front end, design, ontwerp, developer"
 pubkey: 13DB CAA1 2633 81A7
 menu:
-  Home: /
-  Articles: /articles
-  About: /about
+  Начало: /
+  Уроци: /articles
+  За сайта: /about
 
 # Content
-excerpt_link: Read more
+excerpt_link: Прочети повече
 
 # Miscellaneous
 rss: /atom.xml
